<resources>
    <string name="app_name">Opera Proxy</string>
    <string name="tile_label">Opera Proxy</string>
    <string name="region_title">Регион</string>
    <string name="settings_title">Настройки</string>
    <string name="advanced_settings_title">Расширенные настройки</string>
    <string name="btn_start">Запустить прокси</string>
    <string name="btn_stop">Остановить прокси</string>
    <string name="logs_title">Лог:</string>
    <string name="app_selector_btn">Выбрать приложения</string>
    <string name="app_selector_desc">* Если список пуст, проксируется вся система (кроме режима "Черного списка")</string>
    <string name="dns_hint">DNS Сервер (VPN интерфейс)</string>
    <string name="notification_channel">Сервис Opera Proxy</string>
    <string name="notification_title">Opera Proxy Активен</string>
    <string name="notification_action_stop">ОСТАНОВИТЬ</string>
    <string name="btn_settings_advanced">Расширенные настройки</string>
    <string name="btn_reset_defaults">Сбросить по умолчанию</string>
    <string name="btn_save">Сохранить</string>
    <string name="mode_title">Режим фильтрации приложений:</string>
    <string name="mode_whitelist">Белый список (Только выбранные)</string>
    <string name="mode_whitelist_disallowed">Белый список (через Disallowed)</string>
    <string name="mode_blacklist">Черный список (Все, кроме выбранных)</string>
    <string name="pref_bind_address">Прослушиваемый IP:Порт</string>
    <string name="pref_bind_address_hint">127.0.0.1:1085</string>
    <string name="help_bind_address">Адрес и порт локального интерфейса для прослушивания входящих соединений.\nПорт может быть установлен в диапазоне от 1024 до 65535</string>
    <string name="pref_bootstrap_dns">DNS для инициализации соединения</string>
    <string name="pref_bootstrap_dns_hint">Например https://8.8.8.8/dns-query</string>
    <string name="help_bootstrap_dns">Список DoH/DoT резолверов через запятую для инициализации соединения.\nОн нужен для выбора защищённых DNS-серверов, которые шифруют запросы на разрешение доменов, защищая от перехвата, подмены и слежки провайдерами, маскируя трафик под обычный HTTPS.\nСтроку можно полностью удалить и использовать параметр --api-address для прямого обращения к серверам Opera.</string>
    <string name="pref_fake_sni">Подмена названия сайта (Fake SNI)</string>
    <string name="pref_fake_sni_hint">Любой открывающийся сайт</string>
    <string name="help_fake_sni">Fake SNI маскирует настоящее название сайта в TLS-соединении, чтобы обойти блокировки провайдера или цензуру.\n\nАдрес ЛЮБОГО сайта из "белого списка" провайдера, который работает в мобильной сети/WiFI.\n\nБез www или http:// или https://</string>
    <string name="pref_upstream_proxy">Промежуточный прокси-сервер (Upstream Proxy)</string>
    <string name="pref_upstream_proxy_hint">Например socks5://127.0.0.1:1080</string>
    <string name="help_upstream_proxy">Внешний прокси, через который будет проходить весь трафик.\nМожно совместить с ByeByeDPI в режиме прокси.\n\nПоддерживает формат:\nhttp|https|socks5|socks5h://[login:password@]host[:port]\n\nПримеры:\nhttp://user:password@192.168.1.1:3128\nsocks5://127.0.0.1:1080.</string>
    <string name="pref_api_address">API или IP для подключения к серверу</string>
    <string name="pref_api_address_hint">api.sec-tunnel.com или вручную</string>
    <string name="help_api_address">Адрес API сервера Opera. Установка этого параметра позволяет подключиться напрямую к указанному серверу.\n\nНажмите на иконку списка справа, чтобы выбрать стандартные сервера.\n\nЛибо в режиме командной строки запустите -country EU -list-proxies что бы узнать IP адресс для прямого подключения.</string>
    <string name="dialog_clear_bootstrap_title">Очистить DNS Bootstrap?</string>
    <string name="dialog_clear_bootstrap_msg">Вы установили прямой API/IP адрес.\n\Хотите очистить поле "DNS для инициализации", чтобы соединение шло напрямую без резолвинга через DoH.</string>
    <string name="pref_verbosity">Логи</string>
    <string name="help_verbosity">Детализация логов. 10 - макс. детализация, 50 - только критические ошибки.</string>
    <string name="pref_socks_mode">Режим SOCKS5</string>
    <string name="help_socks_mode">Если включено, локальный порт ожидает SOCKS5 соединения вместо HTTP прокси.</string>
    <string name="pref_proxy_only">Режим «Только Прокси»</string>
    <string name="help_proxy_only">Запускает только локальный сервер без создания VPN-туннеля.\nТребует ручной настройки прокси в других приложениях или Wi-Fi соединении Android с указанием "Прослушиваемого IP:Порта".</string>
    <string name="pref_test_url">Тестовый URL для выбора быстрого сервера (Benchmark)</string>
    <string name="pref_test_url_hint">Например https://ajax.googleapis.com/ajax/libs/indefinite-observable/2.0.1/indefinite-observable.bundle.js</string>
    <string name="help_test_url">URL, используемый для тестирования скорости и выбора самого быстрого сервера. Ожидает ответа со статусом 200.</string>
    <string name="pref_cmd_args">Аргументы запуска</string>
    <string name="pref_manual_mode">Ручное редактирование команды</string>
    <string name="help_manual_mode">Если включено, сервис использует строку ниже как аргументы запуска (игнорируя другие настройки выше).\nПути к бинарнику и сертификату добавляются автоматически.</string>
    <string name="pref_tun_dns_strategy">Tun2Proxy DNS</string>
    <string name="help_tun_dns_strategy">Метод обработки DNS-запросов внутри VPN-туннеля:\nVirtual: Fake-IP (быстро, но может ломать некоторые приложения)\nOver TCP: Отправка DNS через TCP прокси (стабильно)</string>
    <string-array name="dns_strategy_labels">
        <item>Virtual (Fake-IP)</item>
        <item>Over TCP (Default)</item>
        
    </string-array>
    <string-array name="dns_strategy_values">
        <item>0</item> 
        <item>1</item> 
         
    </string-array>
    <string name="err_invalid_format">Неверный формат</string>
    <string name="err_required">Обязательное поле</string>
    <string name="notification_mode_proxy_http_no_vpn">HTTP-proxy</string>
    <string name="notification_mode_proxy_socks_no_vpn">SOCKS5-proxy</string>
    <string name="notification_mode_vpn_http">VPN: TUN → HTTP(tun2proxy)</string>
    <string name="notification_mode_vpn_socks">VPN: TUN → SOCKS5(tun2proxy)</string>
    <string-array name="verbosity_levels">
        <item>(Wrapper) Оболочка</item>
        <item>(Debug) Все логи</item>
        <item>(Info) Стандарт</item>
        <item>(Warning)</item>
        <item>(Error)</item>
        <item>(Critical)</item>
    </string-array>
    <string-array name="verbosity_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string name="about_section">О программе</string>
    <string name="github_link_text">Новые релизы (GitHub SLY-F0X)</string>
    <string name="Logs_description">Лог событий</string>
    <string name="ClearLogs">Очистить</string>
    <string name="CopyLogs">Копировать</string>
    <string name="DNS_for_VPN">8.8.8.8</string>
    <string name="ServerAM">Америка</string>
    <string name="ServerAS">Азия</string>
    <string name="ServerEU">Европа</string>
    <string name="AdvSettings_localnetwork">Локальная сеть</string>
    <string name="AdvSettings_HideTraffic">Трафик и маскировка</string>
    <string name="AdvSettings_API_description">В случае ошибок при подключении к серверам</string>
    <string name="AdvSettings_Debug">Отладка</string>
    <string name="AdvSettings_cmd_preview_override">CMD Preview / Override</string>
    <string name="AdvSettings_dns">DNS</string>
    <string name="license_section">Лицензия</string>
    <string name="license_link_text">Посмотреть лицензию открытого ПО</string>
    <string name="license_dialog_title">Лицензионное соглашение</string>
    <string name="license_close">Закрыть</string>
</resources>